Add deps on both postgresql and postgresql-ha, plus nginx

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ docker/lemmy_mine.hjson
 docker/dev/env_deploy.sh
 volumes
 
+# helm dependencies
+docker/helm/lemmy/charts/*
+docker/helm/lemmy/Chart.lock
+
 # ide config
 .idea
 .vscode
